--- a/client/app/register/register.scss
+++ b/client/app/register/register.scss
@@ -12,8 +12,8 @@ $label-color: #393939;
 .participant-form label {
   color: $selected-color;
   margin-left: 0px;
-  font-family: "HelveticaNeue-Light";
   font-size: 18px;
+  font-weight: normal;
 }
 
 .participant-form input {
@@ -51,6 +51,15 @@ $label-color: #393939;
 
 .participant-form select:focus {
   border: 2px solid $selected-color;
+}
+
+.participant-form button {
+  background: #266591;
+  box-shadow: 0px 2px 4px 0px rgba(84, 84, 84, 0.50), 1px 0px 4px 0px rgba(85, 85, 85, 0.50);
+  border-radius: 23px;
+  color: white;
+  height: 50px;
+  width: 200px;
 }
 
 .handle-error {
