--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -24,6 +24,10 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
   padding: 0.2em 0;
 }
 
+html, body{
+  height: 100%;
+}
+
 // Component styles are injected through grunt
 // injector
 @import 'admin/admin.scss';
