--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -31,13 +31,13 @@
   height: 100%;
   width: 100%;
   background: rgba(255, 255, 255, 1);
-  background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(207, 253, 255, 1) 83%, rgba(207, 253, 255, 1) 90%, rgba(188, 224, 238, 1) 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(83%, rgba(207, 253, 255, 1)), color-stop(90%, rgba(207, 253, 255, 1)), color-stop(100%, rgba(188, 224, 238, 1)));
-  background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(207, 253, 255, 1) 83%, rgba(207, 253, 255, 1) 90%, rgba(188, 224, 238, 1) 100%);
-  background: -o-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(207, 253, 255, 1) 83%, rgba(207, 253, 255, 1) 90%, rgba(188, 224, 238, 1) 100%);
-  background: -ms-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(207, 253, 255, 1) 83%, rgba(207, 253, 255, 1) 90%, rgba(188, 224, 238, 1) 100%);
-  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 1) 0%, rgba(207, 253, 255, 1) 83%, rgba(207, 253, 255, 1) 90%, rgba(188, 224, 238, 1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#bce0ee', GradientType=1);
+  background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(83%, rgba(242, 252, 252, 1)), color-stop(90%, rgba(232, 254, 255, 1)), color-stop(100%, rgba(252, 254, 255, 1)));
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
+  background: -o-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
+  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#fcfeff', GradientType=1);
 
 }
 
@@ -100,3 +100,52 @@
   background: linear-gradient(to bottom, rgba(200, 226, 242, 1) 0%, rgba(200, 226, 242, 1) 48%, rgba(185, 211, 226, 1) 49%, rgba(185, 211, 226, 1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c8e2f2', endColorstr='#b9d3e2', GradientType=0);
 }
+
+.honey-comb{
+  position: fixed;
+  width:10000px;
+  left:-10px;
+}
+
+.hex {
+    float:left;
+    margin-right: -10px;
+    margin-bottom: -20px;
+}
+.hex .left {
+    float: left;
+    width: 0;
+    border-right: 15px solid #247EBC;
+    border-top: 25.95px solid transparent;
+    border-bottom: 25.95px solid transparent;
+}
+.hex .middle {
+    float: left;
+    width: 30px;
+    height: 51.9px;
+    background: #247EBC;
+}
+.hex .right {
+    float: left;
+    width: 0;
+    border-left: 15px solid #247EBC;
+    border-top: 25.95px solid transparent;
+    border-bottom: 25.95px solid transparent;
+}
+.hex-row {
+    clear: left;
+}
+
+.hex-row-transparent{
+  @extend .hex-row;
+  visibility: hidden;
+}
+
+.hex-transparent{
+  @extend .hex;
+  visibility: hidden;
+}
+.hex.even {
+    margin-top: 26px;
+}
+
