--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -127,6 +127,7 @@
   border-right: 15px solid #247EBC;
   border-top: 25.95px solid transparent;
   border-bottom: 25.95px solid transparent;
+
 }
 
 .hex-light .left {
@@ -214,5 +215,42 @@
 
 .hex-dark .even {
   margin-top: 26px;
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+.hex-animation {
+  animation-name: fade-out;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-delay: 2s;
+  -webkit-animation-delay: 2s;
+  animation-direction: alternate;
+}
+
+.hex-animation2 {
+  animation-name: fade-out;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-delay: 5s;
+  -webkit-animation-delay: 5s;
+  animation-direction: alternate;
+}
+
+.hex-animation3{
+  animation-name: fade-out;
+  animation-duration: 7s;
+  animation-iteration-count: infinite;
+  animation-delay: 1s;
+  -webkit-animation-delay: 1s;
+  animation-direction: alternate;
 }
 
