--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -281,4 +281,11 @@
   opacity: 1;
   border: 2px solid #9AB0BC;
   margin-top:30px;
+  padding: 0px;
+}
+
+.event-image{
+  width:100%;
+  height:100%;
+  border-radius: 16px;
 }
