--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -287,5 +287,16 @@
 .event-image{
   width:100%;
   height:100%;
-  border-radius: 16px;
+  border-radius: 14px;
+}
+
+.sponsors{
+  height: 75%;
+  width: 100%;
+  background-color: white;
+  margin-top: 50px;
+}
+
+.sponsor-image{
+  margin-bottom: 30px;
 }
