Selective templating added

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -32,6 +32,7 @@ html, body{
 // injector
 @import 'admin/admin.scss';
 @import 'main/main.scss';
+@import 'participants/participants.scss';
 @import 'register/register.scss';
 @import '../components/footer/footer.scss';
 @import '../components/modal/modal.scss';
