Registration form is done and done

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -34,6 +34,7 @@ html, body{
 @import 'main/main.scss';
 @import 'participants/participants.scss';
 @import 'register/register.scss';
+@import 'success/success.scss';
 @import '../components/footer/footer.scss';
 @import '../components/modal/modal.scss';
 // endinjector
