--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -2,43 +2,11 @@
   margin: 20px 0;
 }
 
-#banner {
-  border-bottom: none;
-  margin-top: -20px;
-}
 
-#banner h1 {
-  font-size: 60px;
-  line-height: 1;
-  letter-spacing: -1px;
-}
-
-.hero-unit {
-  position: relative;
-  padding: 30px 15px;
-  color: #F5F5F5;
-  text-align: center;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  background: #4393B9;
-}
-
-.navbar-text {
-  margin-left: 15px;
-}
 
 .landing {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background: rgba(255, 255, 255, 1);
-  background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(83%, rgba(242, 252, 252, 1)), color-stop(90%, rgba(232, 254, 255, 1)), color-stop(100%, rgba(252, 254, 255, 1)));
-  background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
-  background: -o-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
-  background: -ms-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
-  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#fcfeff', GradientType=1);
 
+  background-color: transparent;
 }
 
 .college-name {
@@ -104,14 +72,15 @@
   position: fixed;
   width: 10000PX;
   left: -10px;
-  background: rgba(255, 255, 255, 1);
+  background: rgba(255, 255, 255, 0);
   background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
   background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255, 255, 255, 1)), color-stop(83%, rgba(242, 252, 252, 1)), color-stop(90%, rgba(232, 254, 255, 1)), color-stop(100%, rgba(252, 254, 255, 1)));
   background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
   background: -o-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
   background: -ms-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
   background: radial-gradient(ellipse at center, rgba(255, 255, 255, 1) 0%, rgba(242, 252, 252, 1) 83%, rgba(232, 254, 255, 1) 90%, rgba(252, 254, 255, 1) 100%);
-
+  height:100%;
+  z-index: -1;
 }
 
 .hex {
@@ -261,16 +230,6 @@
   animation-direction: alternate;
 }
 
-.events {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 100%;
-  left: 0;
-  background-color: rgba(245, 250, 254, 0);
-
-}
-
 .event-card {
   height: 256px;
   -webkit-box-shadow: 0px 4px 0px 0px #9AB0BC;
@@ -291,10 +250,9 @@
 }
 
 .sponsors{
-  height: 50%;
-  width: 100%;
-  background-color: transparent;
+  background-color: rgba(white,0.6);
   margin-top: 50px;
+  z-index: 2;
 }
 
 .sponsor-image{
@@ -302,12 +260,22 @@
 }
 
 .contact{
-  height: 50%;
-  width:100%;
+
   background-color: #144B71;
-  bottom: 0%;
 }
 
 .glyphicon{
+  font-size: 20px;
+}
+
+.develop{
+  color: #393939;
+  text-align: center;
+  padding: 5px;
+}
+
+.develop a {
+  color: #144B71;
+  font-style: bold;
   font-size: 20px;
 }
