--- a/client/app/Allevents/Allevents.scss
+++ b/client/app/Allevents/Allevents.scss
@@ -6,3 +6,28 @@
   background-color: rgba(245, 250, 254, 1);
 
 }
+
+.home-button{
+  margin: 20px;
+   border-radius: 22px 22px 22px 22px;
+  -moz-border-radius: 22px 22px 22px 22px;
+  -webkit-border-radius: 22px 22px 22px 22px;
+  border: 0px solid #9AB0BC;
+  -webkit-box-shadow: 0px 4px 0px 0px #9AB0BC;
+  -moz-box-shadow: 0px 4px 0px 0px #9AB0BC;
+  box-shadow: 0px 4px 0px 0px #9AB0BC;
+  font-weight: normal;
+  font-size: 20px;
+  color: #2D709D;
+  outline: none;
+  height: 50px;
+  width:100px;
+  background: rgba(200, 226, 242, 1);
+  background: -moz-linear-gradient(top, rgba(200, 226, 242, 1) 0%, rgba(200, 226, 242, 1) 48%, rgba(185, 211, 226, 1) 49%, rgba(185, 211, 226, 1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(200, 226, 242, 1)), color-stop(48%, rgba(200, 226, 242, 1)), color-stop(49%, rgba(185, 211, 226, 1)), color-stop(100%, rgba(185, 211, 226, 1)));
+  background: -webkit-linear-gradient(top, rgba(200, 226, 242, 1) 0%, rgba(200, 226, 242, 1) 48%, rgba(185, 211, 226, 1) 49%, rgba(185, 211, 226, 1) 100%);
+  background: -o-linear-gradient(top, rgba(200, 226, 242, 1) 0%, rgba(200, 226, 242, 1) 48%, rgba(185, 211, 226, 1) 49%, rgba(185, 211, 226, 1) 100%);
+  background: -ms-linear-gradient(top, rgba(200, 226, 242, 1) 0%, rgba(200, 226, 242, 1) 48%, rgba(185, 211, 226, 1) 49%, rgba(185, 211, 226, 1) 100%);
+  background: linear-gradient(to bottom, rgba(200, 226, 242, 1) 0%, rgba(200, 226, 242, 1) 48%, rgba(185, 211, 226, 1) 49%, rgba(185, 211, 226, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c8e2f2', endColorstr='#b9d3e2', GradientType=0);
+}
